# lustre-project

./: .ocamlformat  LICENSE  Makefile  README.md  dune-project  lustre-project.opam
examples/: NOTES.md  bug.mls  simple.mls  test.mls
exe/: dune  minilustre.ml
lib/: ast.mli  asttypes.mli  checks.ml  delay_types.ml  delay_types.mli  dune  imp.ml  imp_ast.mli  initialization.ml  initialization_bidir.ml_  lexer.mll  normalization.ml  ocaml_printer.ml  parser.mly  scheduling.ml  typed_ast.mli  typed_ast_printer.ml  typed_ast_utils.ml  typing.ml
src/: ast.mli  checks.ml  dune  imp.ml  imp_ast.mli  lexer.mll  minilustre.ml  normalization.ml  parser.mly  scheduling.ml  typed_ast_printer.ml  typing.ml
